--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "@types/swagger-express-mw": "^0.7.7",
     "copyfiles": "^2.1.0",
     "debug": "^4.1.1",
+    "nodemon": "^2.0.2",
     "rimraf": "^2.6.2",
     "ts-loader": "^5.3.1",
+    "ts-node": "^8.6.2",
     "typescript": "^3.2.4"
   }
 }
