--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
   "author": "Peter Janak",
   "license": "MIT",
   "dependencies": {
+    "ajv": "^6.11.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "config": "^3.0.1",
+    "deep-extend": "^0.6.0",
     "express": "^4.16.4",
     "json-schema-ref-parser": "^6.0.3",
+    "lodash": "^4.17.15",
     "morgan": "^1.9.1",
-    "swagger-express-mw": "^0.7.0"
+    "swagger-node-runner": "^0.7.3",
+    "swagger-ui-express": "^4.1.3"
   },
   "devDependencies": {
     "@types/compression": "0.0.36",
@@ -39,6 +43,7 @@
     "@types/node": "^10.12.18",
     "@types/pino": "^5.8.3",
     "@types/swagger-express-mw": "^0.7.7",
+    "@types/swagger-ui-express": "^4.1.1",
     "copy-webpack-plugin": "^5.1.1",
     "copyfiles": "^2.1.0",
     "debug": "^4.1.1",
@@ -46,6 +51,7 @@
     "rimraf": "^2.6.2",
     "ts-loader": "^5.3.1",
     "ts-node": "^8.6.2",
-    "typescript": "^3.2.4"
+    "typescript": "^3.2.4",
+    "webpack": "^4.41.5"
   }
 }
