--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "@types/debug": "0.0.31",
     "@types/express": "^4.16.0",
     "@types/json-schema": "^7.0.1",
+    "@types/lodash": "^4.14.149",
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.12.18",
     "@types/pino": "^5.8.3",
-    "@types/swagger-express-mw": "^0.7.7",
+    "@types/swagger-node-runner": "^0.6.0",
     "@types/swagger-ui-express": "^4.1.1",
     "copy-webpack-plugin": "^5.1.1",
     "copyfiles": "^2.1.0",
